--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,8 @@ instance/
 *.env
 
 # Data (keep structure, ignore sensitive data)
-app/static/icons/*
+data/icons/*
+!data/icons/.gitkeep
 data/users.json
 
 # Logs
