--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,15 @@
 services:
   web:
-    build: .
+    build:
+      context: .
+      args:
+        - PORT=${PORT:-4000}
     ports:
-      - "127.0.0.1:4000:4000"
+      - "127.0.0.1:${PORT:-4000}:${PORT:-4000}"
     volumes:
       - ./data:/code/data
+    env_file:
+      - .env
+    environment:
+      - DEV_MODE=${DEV_MODE:-false}
+      - PORT=${PORT:-4000}
