--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,8 +1,11 @@
 # syntax=docker/dockerfile:1
+# Development Dockerfile - Flask dev server with hot reload
 FROM python:3.12-alpine
 WORKDIR /code
 ENV FLASK_APP=app.py
 ENV FLASK_RUN_HOST=0.0.0.0
+ENV FLASK_DEBUG=1
+ENV FLASK_ENV=development
 
 # Install necessary build tools and dependencies
 RUN apk add --no-cache gcc musl-dev linux-headers
@@ -11,11 +14,8 @@ RUN apk add --no-cache gcc musl-dev linux-headers
 COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
 
-# Copy application code and other files
-COPY . .
-
 # Create necessary directories
 RUN mkdir -p /code/data/icons
 
-# Production: use gunicorn on port 4000
-CMD ["gunicorn", "-b", "0.0.0.0:4000", "app:create_app()"]
+# Development: use Flask dev server on port 3000 with hot reload
+CMD ["flask", "run", "--host=0.0.0.0", "--port=3000", "--reload", "--debugger"]
