--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
+# Development mode - set to true for dev, false for production
+# Use docker-compose.dev.yml for dev (port 3000)
+# Use docker-compose.yml for production (port 4000)
+DEV_MODE=false
+
 # Flask secret key - CHANGE THIS IN PRODUCTION
 # Generate with: python -c "import secrets; print(secrets.token_hex(32))"
 SECRET_KEY=your-secret-key-here
